--- a/shared/logging/pyproject.toml
+++ b/shared/logging/pyproject.toml
@@ -15,19 +15,40 @@
 # specific language governing permissions and limitations
 # under the License.
 
-from __future__ import annotations
+[project]
+name = "apache-airflow-shared-logging"
+description = "Shared logging code for Airflow distributions"
+version = "0.0"
+classifiers = [
+    "Private :: Do Not Upload",
+]
 
-import pytest
+dependencies = [
+    "msgspec>=0.19.0",
+    "pygtrie>=2.5.0",
+    "structlog>=25.4.0",
+]
 
+[dependency-groups]
+dev = [
+    "apache-airflow-devel-common",
+]
 
-@pytest.fixture(scope="module", autouse=True)
-def reset_to_default_logging():
-    """
-    Initialize ``BaseTaskRunner`` might have side effect to another tests.
-    This fixture reset back logging to default after execution of separate module  in this test package.
-    """
-    yield
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-    from airflow.listeners.listener import get_listener_manager
+[tool.hatch.build.targets.wheel]
+packages = ["src/airflow_shared"]
 
-    get_listener_manager().clear()
+[tool.ruff]
+extend = "../../pyproject.toml"
+src = ["src"]
+
+[tool.ruff.lint.per-file-ignores]
+# Ignore Doc rules et al for anything outside of tests
+"!src/*" = ["D", "S101", "TRY002"]
+
+[tool.ruff.lint.flake8-tidy-imports]
+# Override the workspace level default
+ban-relative-imports = "parents"
