Feature #39363: Add Advanced Tag search functionality to DAGs list
Motivation:
Improve the user experience by enabling support for Advanced Tag
search using logical operators AND, OR and parentheses for
precedence. This allows users to construct complex queries
based on tags, making it significantly easier to locate specific
DAGs in large or complex environments.

What was done?:
Added the logic to parse and handle advanced tag search queries;
Modified the necessary API endpoints;
Added tests to ensure the functionality works as expected;
Added UI components to support advanced tag search.

Co-authored-by: João Botelho <joao.v.botelho@tecnico.ulisboa.pt>

--- a/airflow-core/src/airflow/api_fastapi/core_api/openapi/_private_ui.yaml
+++ b/airflow-core/src/airflow/api_fastapi/core_api/openapi/_private_ui.yaml
@@ -151,6 +151,16 @@ paths:
             type: string
           - type: 'null'
           title: Tags Match Mode
+      - name: tags_advanced_query
+        in: query
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          description: Advanced tag query, e.g. (tag1 OR tag2) AND tag3
+          title: Tags Advanced Query
+        description: Advanced tag query, e.g. (tag1 OR tag2) AND tag3
       - name: owners
         in: query
         required: false
