Refactor: added missing dependency and modified ui
Added pyparsing to airflow-core pyproject.toml;
Removed unecessary code;
Changed dialog close/enter buttons positions.

Co-authored-by: Diogo Rodrigues <diogo.teixeira.rodrigues@tecnico.ulisboa.pt>

--- a/airflow-core/pyproject.toml
+++ b/airflow-core/pyproject.toml
@@ -117,6 +117,7 @@ dependencies = [
     # See https://github.com/pygments/pygments/issues/2834
     "pygments>=2.0.1,!=2.19.0",
     "pyjwt>=2.10.0",
+    "pyparsing>=3.2.3",
     "python-daemon>=3.0.0",
     "python-dateutil>=2.7.0",
     "python-slugify>=5.0",
