--- a/airflow-core/src/airflow/api_fastapi/core_api/openapi/v2-rest-api-generated.yaml
+++ b/airflow-core/src/airflow/api_fastapi/core_api/openapi/v2-rest-api-generated.yaml
@@ -7825,6 +7825,408 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
+  /api/v2/hitl-shared-links/generate/{dag_id}/{dag_run_id}/{task_id}:
+    post:
+      tags:
+      - HITLSharedLinks
+      summary: Generate Shared Link
+      description: 'Generate a shared link for HITL tasks.
+
+
+        This endpoint generates a secure, time-limited shared link that allows external
+        users
+
+        to interact with HITL tasks without requiring full Airflow authentication.
+        The link
+
+        can be configured for either direct action execution or UI redirection.
+
+
+        :param dag_id: The DAG identifier
+
+        :param dag_run_id: The DAG run identifier
+
+        :param task_id: The task identifier
+
+        :param try_number: The try number for the task
+
+        :param request: Request containing link configuration
+
+        :param user: The authenticated user creating the shared link
+
+        :param session: Database session for data persistence
+
+        :param http_request: HTTP request for base URL extraction
+
+        :param map_index: The map index for mapped tasks
+
+
+        :raises HTTPException: 403 if HITL shared links are not enabled
+
+        :raises HTTPException: 404 if the task instance does not exist
+
+        :raises HTTPException: 400 if link generation fails due to invalid parameters
+
+
+        :return: GenerateSharedLinkResponse containing the generated link URL and
+        metadata'
+      operationId: generate_shared_link
+      security:
+      - OAuth2PasswordBearer: []
+      - HTTPBearer: []
+      parameters:
+      - name: dag_id
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Dag Id
+      - name: dag_run_id
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Dag Run Id
+      - name: task_id
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Task Id
+      - name: try_number
+        in: query
+        required: true
+        schema:
+          type: integer
+          title: Try Number
+      - name: map_index
+        in: query
+        required: false
+        schema:
+          anyOf:
+          - type: integer
+          - type: 'null'
+          title: Map Index
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GenerateSharedLinkRequest'
+      responses:
+        '201':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenerateSharedLinkResponse'
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Unauthorized
+        '403':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Forbidden
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Bad Request
+        '404':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Not Found
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+  /api/v2/hitl-shared-links/generate/{dag_id}/{dag_run_id}/{task_id}/{map_index}:
+    post:
+      tags:
+      - HITLSharedLinks
+      summary: Generate Mapped Ti Shared Link
+      description: 'Generate a shared link for mapped HITL tasks.
+
+
+        This endpoint generates a secure, time-limited shared link for mapped task
+        instances,
+
+        allowing external users to interact with specific mapped HITL tasks without
+        requiring
+
+        full Airflow authentication. The link can be configured for either direct
+        action
+
+        execution or UI redirection.
+
+
+        :param dag_id: The DAG identifier
+
+        :param dag_run_id: The DAG run identifier
+
+        :param task_id: The task identifier
+
+        :param map_index: The map index for the mapped task instance
+
+        :param try_number: The try number for the task
+
+        :param request: Request containing link configuration
+
+        :param user: The authenticated user creating the shared link
+
+        :param session: Database session for data persistence
+
+        :param http_request: HTTP request for base URL extraction
+
+
+        :raises HTTPException: 403 if HITL shared links are not enabled
+
+        :raises HTTPException: 404 if the task instance does not exist
+
+        :raises HTTPException: 400 if link generation fails due to invalid parameters
+
+
+        :return: GenerateSharedLinkResponse containing the generated link URL and
+        metadata'
+      operationId: generate_mapped_ti_shared_link
+      security:
+      - OAuth2PasswordBearer: []
+      - HTTPBearer: []
+      parameters:
+      - name: dag_id
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Dag Id
+      - name: dag_run_id
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Dag Run Id
+      - name: task_id
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Task Id
+      - name: map_index
+        in: path
+        required: true
+        schema:
+          type: integer
+          title: Map Index
+      - name: try_number
+        in: query
+        required: true
+        schema:
+          type: integer
+          title: Try Number
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GenerateSharedLinkRequest'
+      responses:
+        '201':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenerateSharedLinkResponse'
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Unauthorized
+        '403':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Forbidden
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Bad Request
+        '404':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Not Found
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+  /api/v2/hitl-shared-links/redirect:
+    get:
+      tags:
+      - HITLSharedLinks
+      summary: Redirect Shared Link
+      description: 'Redirect to Airflow UI for HITL task interaction via shared link.
+
+
+        This endpoint redirects external users to the Airflow UI where they can interact
+
+        with HITL tasks through a secure shared link. The link must be a ui_redirect-type
+
+        link, which provides access to the full Airflow interface for decision-making.
+
+
+        :param token: Base64-encoded token containing link metadata and expiration
+
+        :param http_request: HTTP request for base URL extraction
+
+
+        :raises HTTPException: 403 if HITL shared links are not enabled
+
+        :raises HTTPException: 404 if the task instance does not exist
+
+        :raises HTTPException: 400 if token is invalid or link has expired
+
+
+        :return: RedirectResponse to Airflow UI'
+      operationId: redirect_shared_link
+      parameters:
+      - name: token
+        in: query
+        required: true
+        schema:
+          type: string
+          title: Token
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Unauthorized
+        '403':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Forbidden
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Bad Request
+        '404':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Not Found
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+  /api/v2/hitl-shared-links/execute:
+    get:
+      tags:
+      - HITLSharedLinks
+      summary: Execute Shared Link Action
+      description: 'Execute an action via shared link by making PATCH request to existing
+        HITL endpoint.
+
+
+        This endpoint allows external users to execute HITL task actions through a
+        secure
+
+        shared link. The link must be a direct_action-type link, which enables direct
+        execution
+
+        of predefined actions (e.g., approve, reject) by making a PATCH request to
+        the existing
+
+        HITL endpoint without requiring full Airflow authentication.
+
+
+        :param token: Base64-encoded token containing link metadata and action data
+
+        :param session: Database session for data persistence
+
+
+        :raises HTTPException: 403 if HITL shared links are not enabled
+
+        :raises HTTPException: 404 if the task instance or HITL detail does not exist
+
+        :raises HTTPException: 400 if token is invalid or link has expired
+
+
+        :return: HITLDetailResponse containing the execution result'
+      operationId: execute_shared_link_action
+      parameters:
+      - name: token
+        in: query
+        required: true
+        schema:
+          type: string
+          title: Token
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HITLDetailResponse'
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Unauthorized
+        '403':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Forbidden
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Bad Request
+        '404':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPExceptionResponse'
+          description: Not Found
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
   /api/v2/monitor/health:
     get:
       tags:
@@ -10307,6 +10709,95 @@ components:
       - name
       title: FastAPIRootMiddlewareResponse
       description: Serializer for Plugin FastAPI root middleware responses.
+    GenerateSharedLinkRequest:
+      properties:
+        link_type:
+          type: string
+          title: Link Type
+          description: 'Type of link to generate: ''ui_redirect'' for UI interaction
+            or ''direct_action'' for direct execution'
+          default: direct_action
+        action:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Action
+          description: Optional action to perform when link is accessed (e.g., 'approve',
+            'reject'). Required for direct_action links.
+        chosen_options:
+          anyOf:
+          - items:
+              type: string
+            type: array
+          - type: 'null'
+          title: Chosen Options
+          description: Chosen options for direct_action links
+        params_input:
+          anyOf:
+          - additionalProperties: true
+            type: object
+          - type: 'null'
+          title: Params Input
+          description: Parameters input for direct_action links
+        expiration_hours:
+          anyOf:
+          - type: integer
+          - type: 'null'
+          title: Expiration Hours
+          description: Custom expiration time in hours
+      type: object
+      title: GenerateSharedLinkRequest
+      description: Request model for generating HITL shared links.
+    GenerateSharedLinkResponse:
+      properties:
+        url:
+          type: string
+          title: Url
+        expires_at:
+          type: string
+          title: Expires At
+        link_type:
+          type: string
+          title: Link Type
+        action:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Action
+        dag_id:
+          type: string
+          title: Dag Id
+        dag_run_id:
+          type: string
+          title: Dag Run Id
+        task_id:
+          type: string
+          title: Task Id
+        try_number:
+          type: integer
+          title: Try Number
+        map_index:
+          anyOf:
+          - type: integer
+          - type: 'null'
+          title: Map Index
+        task_instance_uuid:
+          type: string
+          title: Task Instance Uuid
+      type: object
+      required:
+      - url
+      - expires_at
+      - link_type
+      - action
+      - dag_id
+      - dag_run_id
+      - task_id
+      - try_number
+      - map_index
+      - task_instance_uuid
+      title: GenerateSharedLinkResponse
+      description: Response model for generated HITL shared links.
     HITLDetail:
       properties:
         task_instance:
@@ -10366,6 +10857,17 @@ components:
           type: boolean
           title: Response Received
           default: false
+        link_url:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Link Url
+        expires_at:
+          anyOf:
+          - type: string
+            format: date-time
+          - type: 'null'
+          title: Expires At
       type: object
       required:
       - task_instance
@@ -10383,6 +10885,17 @@ components:
         total_entries:
           type: integer
           title: Total Entries
+        chosen_options:
+          anyOf:
+          - items:
+              type: string
+            type: array
+          - type: 'null'
+          title: Chosen Options
+        params_input:
+          additionalProperties: true
+          type: object
+          title: Params Input
       type: object
       required:
       - hitl_details
@@ -10408,6 +10921,31 @@ components:
           additionalProperties: true
           type: object
           title: Params Input
+        task_instance_id:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Task Instance Id
+        link_url:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Link Url
+        expires_at:
+          anyOf:
+          - type: string
+            format: date-time
+          - type: 'null'
+          title: Expires At
+        action:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Action
+        link_type:
+          type: string
+          title: Link Type
+          default: direct_action
       type: object
       required:
       - user_id
@@ -11961,6 +12499,11 @@ components:
           additionalProperties: true
           type: object
           title: Params Input
+        try_number:
+          type: integer
+          title: Try Number
+          description: Try number for the task
+          default: 1
       type: object
       required:
       - chosen_options
