--- a/.github/workflows/additional-prod-image-tests.yml
+++ b/.github/workflows/additional-prod-image-tests.yml
@@ -222,4 +222,11 @@ jobs:
           use-uv: ${{ inputs.use-uv }}
         id: breeze
       - name: "Test e2e integration tests"
-        run: cd ./airflow-e2e-tests && uv run pytest ./tests/ -s
+        run: cd ./airflow-e2e-tests && uv run pytest ./tests/
+      - name: "Upload e2e test report"
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02  # v4.6.2
+        with:
+          name: e2e-test-report
+          path: './airflow-e2e-tests/_e2e_test_report.json'
+          retention-days: '7'
+          if-no-files-found: 'error'
