--- a/airflow-core/src/airflow/ui/package.json
+++ b/airflow-core/src/airflow/ui/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.8.4",
     "chakra-react-select": "6.1.0",
     "chart.js": "^4.4.9",
+    "chartjs-adapter-dayjs-4": "^1.0.4",
     "chartjs-plugin-annotation": "^3.1.0",
     "dayjs": "^1.11.13",
     "debounce-promise": "^3.1.2",
