--- a/airflow-core/src/airflow/config_templates/config.yml
+++ b/airflow-core/src/airflow/config_templates/config.yml
@@ -1505,7 +1505,7 @@ api:
     hitl_enable_shared_links:
       description: |
         Enable Human-in-the-Loop (HITL) shared links functionality. When enabled, users can generate
-        shareable links for HITL tasks that can be used to perform actions or redirect to the UI.
+        shareable links for HITL task instances that can be used to respond or redirect to the Airflow UI.
         This feature must be explicitly enabled for security reasons.
       version_added: 3.1.0
       type: boolean
@@ -1513,7 +1513,7 @@ api:
       default: "False"
     hitl_shared_link_expiration_hours:
       description: |
-        Default expiration time in hours for HITL shared links. Links will become invalid
+        Default expiration time in hours for Human-in-the-Loop shared links. Links will become invalid
         after this time period. Can be overridden per link.
       version_added: 3.1.0
       type: integer
