add test case and update LIKE operator pattern

--- a/airflow-core/src/airflow/api_fastapi/core_api/openapi/v2-rest-api-generated.yaml
+++ b/airflow-core/src/airflow/api_fastapi/core_api/openapi/v2-rest-api-generated.yaml
@@ -2896,6 +2896,14 @@ paths:
           - type: string
           - type: 'null'
           title: Bundle Version
+      - name: is_scheduled
+        in: query
+        required: false
+        schema:
+          anyOf:
+          - type: boolean
+          - type: 'null'
+          title: Is Scheduled
       - name: dag_run_start_date_gte
         in: query
         required: false
