Remove db dependency for apprise notifier tests

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -614,6 +614,7 @@ repos:
             ^providers/apache/flink/.*\.py$|
             ^providers/apache/iceberg/.*\.py$|
             ^providers/apache/kafka/.*\.py$|
+            ^providers/apprise/.*\.py$|
             ^providers/arangodb/.*\.py$|
             ^providers/asana/.*\.py$|
             ^providers/cloudant/.*\.py$|
