Create start of DataTable for worker display

--- a/providers/edge3/src/airflow/providers/edge3/plugins/www/package.json
+++ b/providers/edge3/src/airflow/providers/edge3/plugins/www/package.json
@@ -31,6 +31,7 @@
     "@chakra-ui/anatomy": "^2.3.4",
     "@chakra-ui/react": "^3.20.0",
     "@emotion/react": "^11.14.0",
+    "@tanstack/react-table": "^8.21.3",
     "@types/react-router": "^5.1.20",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
