--- a/.github/workflows/basic-tests.yml
+++ b/.github/workflows/basic-tests.yml
@@ -60,6 +60,10 @@ on:  # yamllint disable-line rule:truthy
         description: "Whether to use uv in the image"
         required: true
         type: string
+      platform:
+        description: 'Platform for the build - linux/amd64 or linux/arm64'
+        required: true
+        type: string
 permissions:
   contents: read
 jobs:
@@ -174,6 +178,7 @@ jobs:
         with:
           python-version: ${{steps.breeze.outputs.host-python-version}}
           skip-prek-hooks: ${{ inputs.skip-prek-hooks }}
+          platform: ${{ inputs.platform }}
 
   # Those checks are run if no image needs to be built for checks. This is for simple changes that
   # Do not touch any of the python code or any of the important files that might require building
@@ -203,6 +208,7 @@ jobs:
         with:
           python-version: ${{ steps.breeze.outputs.host-python-version }}
           skip-prek-hooks: ${{ inputs.skip-prek-hooks }}
+          platform: ${{ inputs.platform }}
       - name: Fetch incoming commit ${{ github.sha }} with its parent
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
         with:
@@ -257,6 +263,7 @@ jobs:
         with:
           python-version: ${{steps.breeze.outputs.host-python-version}}
           skip-prek-hooks: ${{ inputs.skip-prek-hooks }}
+          platform: ${{ inputs.platform }}
       # TODO(potiuk): enable this once prek supports automatic upgrade of hooks
       #               after https://github.com/j178/prek/issues/35 is implemented§
       # - name: "Autoupdate all prek hooks"
