--- a/.github/workflows/ci-image-checks.yml
+++ b/.github/workflows/ci-image-checks.yml
@@ -148,6 +148,7 @@ jobs:
         id: prek
         with:
           python-version: ${{steps.breeze.outputs.host-python-version}}
+          platform: ${{ inputs.platform }}
         if: inputs.canary-run == 'true'
       - name: "Prepare .tar file from prek cache"
         run: |
@@ -158,7 +159,7 @@ jobs:
         uses: apache/infrastructure-actions/stash/save@1c35b5ccf8fba5d4c3fdf25a045ca91aa0cbc468
         with:
           # yamllint disable rule:line-length
-          key: cache-prek-v5-${{ steps.breeze.outputs.host-python-version }}-${{ hashFiles('.pre-commit-config.yaml') }}
+          key: cache-prek-v6-${{ inputs.platform }}-${{ steps.breeze.outputs.host-python-version }}-${{ hashFiles('.pre-commit-config.yaml') }}
           path: /tmp/cache-prek.tar.gz
           if-no-files-found: 'error'
           retention-days: '2'
@@ -194,6 +195,7 @@ jobs:
         id: prek
         with:
           python-version: ${{steps.breeze.outputs.host-python-version}}
+          platform: ${{ inputs.platform }}
       - name: "Static checks"
         run: prek --all-files --show-diff-on-failure --color always
         env:
@@ -237,6 +239,7 @@ jobs:
         id: prek
         with:
           python-version: ${{steps.breeze.outputs.host-python-version}}
+          platform: ${{ inputs.platform }}
       - name: "MyPy checks for ${{ matrix.mypy-check }}"
         run: prek --color always --verbose --hook-stage manual "$MYPY_CHECK" --all-files
         env:
