Fix conditionals for test types and make them consistent
The go tests do not depend on CI image being built, also they should
not be run independently on the `run-tests` flag - because
run-tests is generally for our unit tests.

They should be run when `run-go-sdk-tests` is set and without
dependency on ci-images being built. There were also a few
other issues found during this cleanuup:

Several outputs were inconsistently named:

* run-tests was renamed to run-unit-tests
* need-* outputs were renamed to run-*

Some other fixes were applied:

* only-new-ui-files was removed as it is not needed any more as
  we do not really need that check to be exposed to actions, it
  is only used internally - to not run other tests when only ui
  files changed
* run-system-tests was not properly used (it is currently an
  alias to run-unit-tests anyway - but foreseen for future
  separation$a
* need-javascript-scans and need-python-scans have been removed
  as they are no longer used

--- a/.github/workflows/basic-tests.yml
+++ b/.github/workflows/basic-tests.yml
@@ -32,7 +32,7 @@ on:  # yamllint disable-line rule:truthy
         description: "Whether to run WWW tests (true/false)"
         required: true
         type: string
-      needs-api-codegen:
+      run-api-codegen:
         description: "Whether to run API codegen (true/false)"
         required: true
         type: string
