Make slack providers tests db independent (#54660)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -643,6 +643,7 @@ repos:
             ^providers/segment/.*\.py$|
             ^providers/sendgrid/.*\.py$|
             ^providers/singularity/.*\.py$|
+            ^providers/slack/.*\.py$|
             ^providers/tableau/.*\.py$|
             ^providers/teradata/.*\.py$|
             ^providers/trino/.*\.py$|
