Fix conditionals for test types and make them consistent (#54678)
The go tests do not depend on CI image being built, also they should
not be run independently on the `run-tests` flag - because
run-tests is generally for our unit tests.

They should be run when `run-go-sdk-tests` is set and without
dependency on ci-images being built. There were also a few
other issues found during this cleanuup:

Several outputs were inconsistently named:

* run-tests was renamed to run-unit-tests
* need-* outputs were renamed to run-*

Some other fixes were applied:

* only-new-ui-files was removed as it is not needed any more as
  we do not really need that check to be exposed to actions, it
  is only used internally - to not run other tests when only ui
  files changed
* run-system-tests was not properly used (it is currently an
  alias to run-unit-tests anyway - but foreseen for future
  separation$a
* need-javascript-scans and need-python-scans have been removed
  as they are no longer used

(cherry picked from commit 946097674be25b2a8859497a4ffd2088725d95d6)

--- a/.github/workflows/ci-image-checks.yml
+++ b/.github/workflows/ci-image-checks.yml
@@ -28,7 +28,7 @@ on:  # yamllint disable-line rule:truthy
         description: "Platform for the build - 'linux/amd64' or 'linux/arm64'"
         required: true
         type: string
-      needs-mypy:
+      run-mypy:
         description: "Whether to run mypy checks (true/false)"
         required: true
         type: string
@@ -88,7 +88,7 @@ on:  # yamllint disable-line rule:truthy
         description: "Whether to build docs (true/false)"
         required: true
         type: string
-      needs-api-codegen:
+      run-api-codegen:
         description: "Whether to run API codegen (true/false)"
         required: true
         type: string
@@ -209,7 +209,7 @@ jobs:
     name: "MyPy checks"
     runs-on: ${{ fromJSON(inputs.runners) }}
     needs: install-prek
-    if: inputs.needs-mypy == 'true'
+    if: inputs.run-mypy == 'true'
     strategy:
       fail-fast: false
       matrix:
@@ -404,7 +404,7 @@ jobs:
     timeout-minutes: 60
     name: "Test Python API client"
     runs-on: ${{ fromJSON(inputs.runners) }}
-    if: inputs.needs-api-codegen == 'true'
+    if: inputs.run-api-codegen == 'true'
     env:
       BACKEND: "postgres"
       BACKEND_VERSION: "${{ inputs.default-postgres-version }}"
