--- a/task-sdk/pyproject.toml
+++ b/task-sdk/pyproject.toml
@@ -67,6 +67,14 @@ dependencies = [
     # Start of shared timezones dependencies
     "pendulum>=3.1.0",
     # End of shared timezones dependencies
+    # Start of shared secrets_masker dependencies
+    "pendulum>=3.1.0",
+    "methodtools>=0.4.7",
+    "colorlog>=6.8.2",
+    "pydantic>=2.11.0",
+    "lazy-object-proxy>=1.2.0",
+    "aiosqlite>=0.20.0",
+    # End of shared secrets_masker dependencies
 ]
 
 [project.urls]
