add other stuff

--- a/.github/boring-cyborg.yml
+++ b/.github/boring-cyborg.yml
@@ -386,6 +386,9 @@ labelPRBasedOnFilePath:
   translation:he:
     - airflow-core/src/airflow/ui/public/i18n/locales/he/*
 
+  translation:hu:
+    - airflow-core/src/airflow/ui/public/i18n/locales/hu/*
+
   translation:ko:
     - airflow-core/src/airflow/ui/public/i18n/locales/ko/*
 
